lint cleanup and Visual Studio Code files