@@ -154,11 +154,11 @@ public final class PropertyElf
          }
          else {
             try {
-               logger.debug("Try to create a new instance of \"{}\"", propValue.toString());
-               writeMethod.invoke(target, Class.forName(propValue.toString()).newInstance());
+               logger.debug("Try to create a new instance of \"{}\"", propValue);
+               writeMethod.invoke(target, Class.forName(propValue.toString()).getDeclaredConstructor().newInstance());
             }
             catch (InstantiationException | ClassNotFoundException e) {
-               logger.debug("Class \"{}\" not found or could not instantiate it (Default constructor)", propValue.toString());
+               logger.debug("Class \"{}\" not found or could not instantiate it (Default constructor)", propValue);
                writeMethod.invoke(target, propValue);
             }
          }
